examples/test/testpolicy17850.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17850
  namespace: namespace198
spec:
  podSelector:
    matchLabels:
      key36: value4
      key28: value24
      key38: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value4
      podSelector:
        matchLabels:
          key23: value30
          key18: value27
